force-app/main/default/objects/TUC_Kanban_Config__mdt/TUC_Kanban_Config__mdt.object-meta.xml
<CustomObject>
    <label>TUC Kanban Config</label>
    <pluralLabel>TUC Kanban Configs</pluralLabel>
</CustomObject>