force-app/main/default/objects/TUC_Kanban_Config__mdt/fields/Field_Type_Map__c.field-meta.xml
<CustomField>
    <fullName>Field_Type_Map__c</fullName>
    <description>This field is meant to represent the expected field-to-type mapping that Aura needs in order to digest the incoming information and set up and hyperlink field correctly while displaying UI friendly information rather than raw IDs.

Setup:
Provide a semi-colon separated list of fields to display on the card. This is to be provided in a fieldName to map format, seprated by commas. The map of mapping type to mappingType is separated by colon. If additional entries are needed they are separated by hyphen.

Each field entry is separated by semi-colon.

examples:
CaseNumber,type:STRING;
ContactId,relationName:Contact~*!Name-type:REFERENCE</description>
    <inlineHelpText>Provide a semi-colon separated list of fields to display on the card. This is to be provided in a fieldName to map format, seprated by commas. The map of mapping type to mappingType is separated by colon. If additional entries are needed they are separated by hyphen.

Each field entry is separated by semi-colon.

examples:
CaseNumber,type:STRING;
ContactId,relationName:Contact~*!Name-type:REFERENCE</inlineHelpText>
    <label>Field Type Map</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>