force-app/main/default/objects/TUC_Kanban_Config__mdt/fields/Home_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Home_Object_Name__c</fullName>
    <description>Give the name of the Object the Kanban is based off in a Home Page</description>
    <inlineHelpText>Give the name of the Object the Kanban is based off in a Home Page</inlineHelpText>
    <label>Home Object Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>