force-app/main/default/objects/TUC_Kanban_Config__mdt/fields/Kanban_Group_By__c.field-meta.xml
<CustomField>
    <fullName>Kanban_Group_By__c</fullName>
    <description
    >Enter the Kanban Field group by field API Name. For example, if the only Object is Case, and you would like to see the cases on the kanban column sorted by Status, you
        would enter Status in this field. Remember to enter the __c if this is a custom field.</description>
    <inlineHelpText
    >Enter the Kanban Field group by field API Name. For example, if the only Object is Case, and you would like to see the cases on the kanban column sorted by Status, you
        would enter Status in this field. Remember to enter the __c if this is a custom field.</inlineHelpText>
    <label>Kanban Group By</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>