force-app/main/default/objects/TUC_Kanban_Config__mdt/fields/SOQL_limit_for_closed_statuses__c.field-meta.xml
<CustomField>
    <fullName>SOQL_limit_for_closed_statuses__c</fullName>
    <defaultValue>100</defaultValue>
    <description>This is the limit used by the SOQL query for CLOSED statuses - in this case, just the status &apos;closed&apos;</description>
    <inlineHelpText>A number between 1-999</inlineHelpText>
    <label>SOQL limit for closed statuses</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>