force-app/main/default/objects/TUC_Kanban_Config__mdt/fields/Statuses_to_sort_by_TUC_wait_time__c.field-meta.xml
<CustomField>
    <fullName>Statuses_to_sort_by_TUC_wait_time__c</fullName>
    <description>These statuses must be present in the Values_To_Include_for_Group_By__c field. The statuses listed here will be sorted by the TUC_Wait_Time__c</description>
    <label>Statuses to sort by TUC wait time</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>