force-app/main/default/objects/TUC_Kanban_Config__mdt/fields/Values_To_Include_for_Group_By__c.field-meta.xml
<CustomField>
    <fullName>Values_To_Include_for_Group_By__c</fullName>
    <description
    >Use a semi-colon separated list if to include the values for the Group By. For example, if the object is Case and the columns are Grouped on the field Status. To exclude
        &quot;New&quot; and &quot;Closed&quot; cases, enter in this field: New;Closed Make sure the order is the proper order as well.</description>
    <inlineHelpText
    >Use a semi-colon separated list if to include the values for the Group By. For example, if the object is Case and the columns are Grouped on the field Status. To exclude
        &quot;New&quot; and &quot;Closed&quot; cases, enter in this field: New;Closed Make sure the order is the proper order as well.</inlineHelpText>
    <label>Values To Include for Group By</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>